on mobile devices, fix for incorrect display of the users page

--- a/src/components/Users/UsersForm.module.scss
+++ b/src/components/Users/UsersForm.module.scss
@@ -11,7 +11,7 @@
     align-items: center;
     column-gap: 5px;
     margin-bottom: 25px;
-    @media (max-width: 400px){
+    @media (max-width: 500px){
         row-gap: 10px;
         flex-wrap: wrap;
   }
